Changes to OdinCore VFX
Added SFX to disappear visual. Created a new disappear visual for vendors (without screen shake)

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ SourceControlGenerator.json
 
 # Story files        #
 ######################
-
+*.div
+*.raw
 
 # Asset Folders      #
 ######################
